# weather_station_extended_tutorial

./: .gitignore  .tool-versions  CMakeLists.txt  Makefile  README.md  compile_flags.txt  mix.exs  system.ex
apps/led/: CMakeLists.txt  README.md  manifest.ex
apps/led/src/: main.c  server_receiver.c  token.h
apps/weather_sensor/: CMakeLists.txt  README.md  manifest.ex
apps/weather_sensor/src/: main.c
apps/weather_station/: README.md  manifest.ex  mix.exs
apps/weather_station/lib/: msg_sender.ex  weather_station.ex
config/: config.exs  ips.csv
